userspace: add a libipc

--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -20,6 +20,8 @@ write_file(${CMAKE_BINARY_DIR}/gdbinit "" APPEND)
 
 include(cmake/userspace.cmake)
 
+add_subdirectory(libs/libipc)
+
 add_subdirectory(init)
 add_subdirectory(ping-pong)
 
