--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -59,9 +59,9 @@
                 "-initrd",
                 "${workspaceFolder}/build/initrd.cpio",
                 "-smp",
-                "4",
+                "1",
                 "-append",
-                "kmsg_console=serial",
+                "kmsg_console=serial init=/tests/rpc-test",
                 "-nic",
                 "user",
             ],
