--- a/userspace/libs/librpc/CMakeLists.txt
+++ b/userspace/libs/librpc/CMakeLists.txt
@@ -1,10 +1,10 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_library(rpc STATIC librpc.c)
+add_library(rpc STATIC rpc_server.c rpc_client.c)
 target_include_directories(rpc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
-target_link_libraries(rpc PUBLIC mos::libuserspace)
+target_link_libraries(rpc PUBLIC mos::libuserspace ipc)
 
-add_executable(rpc_test tests/main.c)
-target_link_libraries(rpc_test PRIVATE rpc)
+add_executable(rpc-test tests/main.c)
+target_link_libraries(rpc-test PRIVATE rpc)
 
-add_initrd_item(TARGET /lib/rpc/ rpc_test)
+add_initrd_item(TARGET /tests/ rpc-test)
