mm: improve fork stability and correctness

--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -26,6 +26,8 @@ add_subdirectory(init)
 add_subdirectory(ping-pong)
 add_subdirectory(drivers/x86_text_console)
 
+add_subdirectory(tests)
+
 add_userspace_program(locks SOURCES locks/main.c)
 add_initrd_item(TARGET /programs locks)
 
