--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -57,7 +57,7 @@
                 "-smp",
                 "1",
                 "-append",
-                "kmsg_console=serial init=/tests/rpc-test",
+                "kmsg_console=serial init=/tests/fork-test",
                 "-nic",
                 "user",
             ],
