--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -1,7 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-summary_section(USERSPACE "Userspace Programs")
-add_custom_target(mos_userspace_programs)
 add_custom_target(mos_initrd
     find . -depth | cpio -o --format=crc >../initrd.cpio
     WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/initrd
@@ -13,22 +11,16 @@ add_custom_target(mos_initrd
 target_compile_options(mos_libuserspace PUBLIC "-ffreestanding")
 target_link_options(mos_libuserspace PUBLIC "-nostdlib")
 
-# create a gdbinit file for debugging
-# ! GDB doesn't pick correct symbol file when debugging multiple processes, solve this.
-write_file(${CMAKE_BINARY_DIR}/gdbinit "# GDB init file for MOS")
-write_file(${CMAKE_BINARY_DIR}/gdbinit "" APPEND)
-
 include(cmake/userspace.cmake)
 
 add_subdirectory(libs)
-
 add_subdirectory(init)
-add_subdirectory(ping-pong)
-add_subdirectory(drivers/x86_text_console)
-
+add_subdirectory(drivers)
 add_subdirectory(tests)
 
-add_userspace_program(locks SOURCES locks/main.c)
-add_initrd_item(TARGET /programs locks)
+# initrd resources
+add_to_initrd(FILE assets/msg.txt /assets)
 
-add_initrd_item(FILE /assets assets/msg.txt)
+# if you want to debug a userspace program, replace the line below with the
+# target name of the program you want to debug
+add_to_gdbinit(init)
