--- a/userspace/drivers/x86_text_console/CMakeLists.txt
+++ b/userspace/drivers/x86_text_console/CMakeLists.txt
@@ -1,6 +1,5 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_userspace_program(x86_console_driver SOURCES
-    main.c)
-
-add_initrd_item(TARGET /drivers x86_console_driver)
+add_executable(x86_console_driver main.c)
+target_link_libraries(x86_console_driver PRIVATE rpc)
+setup_userspace_program(x86_console_driver /drivers "x86 console userspace driver")
