--- a/userspace/init/CMakeLists.txt
+++ b/userspace/init/CMakeLists.txt
@@ -1,4 +1,4 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_userspace_program(init SOURCES main.c)
-add_initrd_item(TARGET /programs init)
+add_executable(init main.c)
+setup_userspace_program(init /programs "The init program")
