--- a/userspace/tests/CMakeLists.txt
+++ b/userspace/tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_executable(fork-test fork_test.c)
-target_link_libraries(fork-test PRIVATE mos::libuserspace)
-add_initrd_item(TARGET /tests/ fork-test)
+add_subdirectory(fork)
+add_subdirectory(librpc)
+add_subdirectory(ipc)
+add_subdirectory(locks)
