--- a/userspace/init/CMakeLists.txt
+++ b/userspace/init/CMakeLists.txt
@@ -2,3 +2,5 @@
 
 add_executable(init main.c)
 setup_userspace_program(init /programs "The init program")
+
+target_link_libraries(init PRIVATE rpc)
