--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -55,11 +55,11 @@
                 "-initrd",
                 "${workspaceFolder}/build/initrd.cpio",
                 "-smp",
-                "4",
+                "1",
                 "-append",
-                "kmsg_console=serial init=/tests/fork-test",
-                "-nic",
-                "user",
+                "kmsg_console=serial",
+                "-drive",
+                "file=${workspaceFolder}/rootfs.img,format=raw,if=virtio",
             ],
             "problemMatcher": [ ],
             "group": "none",
