--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,8 +79,8 @@ add_library(mos_kernel.elf STATIC
     kernel/device/device_manager.c
     kernel/elf/elf.c
     kernel/filesystem/cpio/cpio.c
-    kernel/filesystem/filesystem.c
-    kernel/filesystem/mount.c
+    kernel/filesystem/vfs.c
+    kernel/filesystem/dentry.c
     kernel/filesystem/pathutils.c
     kernel/ksyscall.c
     kernel/io/io.c
