--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,14 +6,15 @@ if (BUILD_TESTING)
 endif()
 
 add_kernel_source(RELATIVE_SOURCES test_engine.c)
-target_include_directories(mos_kernel.elf PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(mos_kernel PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 macro(mos_add_test TEST_NAME TEST_DESCRIPTION)
     set(TEST_TARGET mos_test_${TEST_NAME})
+
     add_library(${TEST_TARGET} OBJECT ${CMAKE_CURRENT_LIST_DIR}/${TEST_NAME}/test_${TEST_NAME}.c)
     target_compile_definitions(${TEST_TARGET} PRIVATE -D__MOS_KERNEL__)
     target_include_directories(${TEST_TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-    target_link_libraries(${TEST_TARGET} PRIVATE mos::basic_include mos::platform_include)
+    target_link_libraries(${TEST_TARGET} PRIVATE mos::include)
 
     if (MOS_TESTING_DISABLE_${TEST_NAME})
         set(MOS_TEST_${TEST_NAME}_STATE "disabled")
@@ -21,7 +22,7 @@ macro(mos_add_test TEST_NAME TEST_DESCRIPTION)
         set(MOS_TEST_${TEST_NAME}_STATE "disabled globally")
     else()
         set(MOS_TEST_${TEST_NAME}_STATE "enabled")
-        target_link_libraries(mos_kernel.elf PRIVATE $<TARGET_OBJECTS:${TEST_TARGET}>)
+        target_link_libraries(mos_kernel PRIVATE $<TARGET_OBJECTS:${TEST_TARGET}>)
     endif()
 
     add_summary_item(TESTS ${TEST_NAME} "${TEST_DESCRIPTION}" "${MOS_TEST_${TEST_NAME}_STATE}")
