--- a/userspace/CMakeLists.txt
+++ b/userspace/CMakeLists.txt
@@ -3,7 +3,7 @@
 add_library(mos_libuserspace OBJECT libuserspace.c ${MOS_STANDARD_LIBRARY_SOURCES})
 target_include_directories(mos_libuserspace PUBLIC ${CMAKE_SOURCE_DIR}/userspace/include)
 target_link_libraries(mos_libuserspace PUBLIC gcc mos::include)
-add_dependencies(mos_libuserspace mos::syscall::decl) # needs to be generated before we can compile
+add_dependencies(mos_libuserspace mos_syscall_decl) # needs to be generated before we can compile
 
 # TODO: Remove this once we have a proper userspace libc
 target_compile_options(mos_libuserspace PUBLIC "-ffreestanding")
