fs: add rootfs.img to qemu startup arg

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -57,9 +57,11 @@
                 "-smp",
                 "4",
                 "-append",
-                "kmsg_console=serial init=/tests/fork-test",
+                "kmsg_console=serial",
                 "-nic",
                 "user",
+                "-drive",
+                "file=${workspaceFolder}/rootfs.img,format=raw,if=virtio",
             ],
             "problemMatcher": [ ],
             "group": "none",
