--- a/userspace/initrd/config/init.conf
+++ b/userspace/initrd/config/init.conf
@@ -1,24 +1,43 @@
-# MOS init configurations
-#
-# CONFIGURATION FILE SYNTAX:
-#
-# Each line is a key-value pair, separated by an equals sign,
-# spaces before and after the equals sign are ignored.
-# The line ends with a newline '\n' character.
-#
-# Comments start with a hash '#' character and end with a newline '\n' character.
-# Comments can be placed anywhere in the file, except inside a key-value pair.
-#
-# If a key is specified multiple times, it's considered an array, however the
-# behavior depends on the key, for example, an 'arg' key is supposed to be an
-# array but a 'path' key is not.
+## MOS init configurations
+##
+## CONFIGURATION FILE SYNTAX:
+##
+## Each line is a key-value pair, separated by an equals sign,
+## spaces before and after the equals sign are ignored.
+## The line ends with a newline '\n' character.
+##
+## Comments start with a hash '#' character and end with a newline '\n' character.
+## Comments can be placed anywhere in the file, except inside a key-value pair.
+##
+## If a key is specified multiple times, it's considered an array, however the
+## behavior depends on the key, for example, an 'arg' key is supposed to be an
+## array but a 'path' key is not.
 
-### Device Manager configuration
-### path, and args to the device manager executable
+## Device Manager configuration
+## path, and args to the device manager executable
 device_manager.path = /programs/device-manager
-# device_manager.args =
+## device_manager.args =
 
-### Drivers configuration
-### The drivers are loaded in the order they are specified in the file.
-### The drivers listed below are always loaded regardless of the platform support.
+## Drivers configuration
+## The drivers are loaded in the order they are specified in the file.
+## The drivers listed below are always loaded regardless of the platform support.
 driver = /drivers/x86_console_driver
+
+## Filesystems configuration
+##
+## The filesystems are mounted in the order they are specified in the file.
+##
+## Format:
+##     mount = <Device> <MountPoint> <Filesystem> <Options>
+##
+## Device:     the device to mount, can be a device node or a path to a file, or 'none' for a virtual filesystem
+## MountPoint: the mount point, the mount point should be either an:
+##             - absolute path, e.g. /tmp, or
+##             - relative path, e.g. tmp, relative to the root directory
+## Filesystem: the filesystem type, can be a filesystem name
+## Options:    the mount options, this is filesystem specific
+##
+## Note that the initrd is always mounted as the root filesystem, and
+## it's always read-only.
+##
+mount = none /tmp tmpfs defaults
