userspace: add "coreutils" 😁

--- a/userspace/programs/CMakeLists.txt
+++ b/userspace/programs/CMakeLists.txt
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 add_subdirectory(init)
+add_subdirectory(core-utils)
 add_subdirectory(device-manager)
 add_subdirectory(syscall_demo)
