--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,7 +14,7 @@ macro(mos_add_test TEST_NAME TEST_DESCRIPTION)
     add_library(${TEST_TARGET} OBJECT ${CMAKE_CURRENT_LIST_DIR}/${TEST_NAME}/test_${TEST_NAME}.c)
     target_compile_definitions(${TEST_TARGET} PRIVATE -D__MOS_KERNEL__)
     target_include_directories(${TEST_TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-    target_link_libraries(${TEST_TARGET} PRIVATE mos::include)
+    target_link_libraries(${TEST_TARGET} PRIVATE mos::include mos::private_include)
 
     if (MOS_TESTING_DISABLE_${TEST_NAME})
         set(MOS_TEST_${TEST_NAME}_STATE "disabled")
