--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -26,9 +26,9 @@ endmacro()
 
 mos_add_test(printf "printf family")
 mos_add_test(linked_list "linked list")
-mos_add_test(kmalloc "kmalloc stress test")
-mos_add_test(cmdline_parser "cmdline parser test")
-mos_add_test(hashmap "hashmap test")
-mos_add_test(downwards_stack "downwards stack test")
-mos_add_test(memops "test memery operations")
-mos_add_test(ring_buffer "test ring buffer")
+mos_add_test(kmalloc "kmalloc")
+mos_add_test(cmdline_parser "cmdline parser")
+mos_add_test(hashmap "hashmap")
+mos_add_test(downwards_stack "downwards stack")
+mos_add_test(memops "memery operations")
+mos_add_test(ring_buffer "ring buffer")
