--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,7 +10,7 @@ add_kernel_source(RELATIVE_SOURCES test_engine.c)
 target_include_directories(mos_kernel PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
 macro(mos_add_test TEST_NAME TEST_DESCRIPTION)
-    set(TEST_TARGET mos_test_${TEST_NAME})
+    set(TEST_TARGET _test_${TEST_NAME})
 
     add_library(${TEST_TARGET} OBJECT ${CMAKE_CURRENT_LIST_DIR}/${TEST_NAME}/test_${TEST_NAME}.c)
     target_compile_definitions(${TEST_TARGET} PRIVATE -D__MOS_KERNEL__)
