--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,5 +35,39 @@
                 }
             },
         },
+        {
+            "name": "Attach to qemu - MOS UEFI Bootloader",
+            "type": "cppdbg",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "program": "${workspaceRoot}/build/arch/x86_64/boot/uefi/mos_uefi_loader.efi",
+            "MIMode": "gdb",
+            "miDebuggerPath": "/usr/bin/gdb",
+            "miDebuggerServerAddress": "localhost:1234",
+            "preLaunchTask": "start_uefi_loader",
+            "setupCommands": [
+                {
+                    // !! May need to change the addresses
+                    "description": "Setup UEFI Relocation",
+                    "text": "add-symbol-file ${workspaceRoot}/build/arch/x86_64/boot/uefi/mos_uefi_loader.debug 0xBE36B000 -s .data 0xBE370000",
+                },
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                },
+            ],
+            "sourceFileMap": {
+                "${workspaceFolder}": {
+                    "editorPath": "${workspaceFolder}",
+                    "useForBreakpoints": "true"
+                }
+            },
+        },
     ]
 }
