--- a/arch/x86_64/boot/uefi/CMakeLists.txt
+++ b/arch/x86_64/boot/uefi/CMakeLists.txt
@@ -1,36 +1,49 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
+project(mos_uefi_bootloader C ASM)
+
 find_program(SYSTEM_GCC gcc REQUIRED)
 set(CMAKE_C_COMPILER ${SYSTEM_GCC})
-
-project(mos_uefi_bootloader C ASM)
 
 set(CMAKE_C_STANDARD 17)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS OFF)
 
-find_library(gnuefi NAMES libgnuefi.a REQUIRED)
-find_library(efi NAMES libefi.a REQUIRED)
-find_path(gnuefi_include_dir efi.h REQUIRED PATH_SUFFIXES include include/gnuefi include/efi)
-find_file(gnuefi_crt0 crt0-efi-${MOS_ARCH}.o REQUIRED PATH_SUFFIXES lib)
-find_file(gnuefi_lds elf_${MOS_ARCH}_efi.lds REQUIRED PATH_SUFFIXES lib)
+find_library(gnuefi_libgnuefi NAMES "libgnuefi.a" REQUIRED)
+find_library(gnuefu_libefi NAMES "libefi.a" REQUIRED)
+find_path(gnuefi_include_dir "efi.h" REQUIRED PATH_SUFFIXES "include" "include/gnuefi" "include/efi")
+find_file(gnuefi_crt0 "crt0-efi-${MOS_ARCH}.o" REQUIRED PATH_SUFFIXES "lib")
+find_file(gnuefi_lds "elf_${MOS_ARCH}_efi.lds" REQUIRED PATH_SUFFIXES "lib")
 
-add_library(mos_uefi_loader SHARED unified_bootloader.c)
-target_compile_options(mos_uefi_loader PRIVATE -ffreestanding -fshort-wchar -mno-red-zone -ggdb)
-target_compile_options(mos_uefi_loader PRIVATE -Wno-strict-prototypes) # GNU-EFI produces warnings
-target_link_options(mos_uefi_loader PRIVATE -nostdlib -Wl,-Bsymbolic -znocombreloc -T ${gnuefi_lds})
-target_include_directories(mos_uefi_loader PRIVATE ${gnuefi_include_dir})
-target_link_libraries(mos_uefi_loader ${gnuefi_crt0} ${gnuefi} ${efi})
+add_library(gnuefi INTERFACE IMPORTED)
+set_target_properties(gnuefi PROPERTIES
+    INTERFACE_INCLUDE_DIRECTORIES "${gnuefi_include_dir}"
+    INTERFACE_COMPILE_OPTIONS "-ffreestanding;-fshort-wchar;-mno-red-zone;-ggdb"
+    INTERFACE_LINK_OPTIONS "-nostdlib;-Wl,-Bsymbolic;-znocombreloc;-T;${gnuefi_lds}"
+    INTERFACE_LINK_LIBRARIES "${gnuefi_crt0};${gnuefi_libgnuefi};${gnuefu_libefi}"
+)
+
+add_library(mos_uefi_loader SHARED
+    main.c
+    dump_mem.c
+    read_file.c
+)
+
+target_compile_options(mos_uefi_loader PRIVATE -Wno-strict-prototypes -Wno-pedantic) # GNU-EFI produces warnings
+target_compile_definitions(mos_uefi_loader PRIVATE MOS_LOADER_DEBUG)
+target_link_libraries(mos_uefi_loader gnuefi)
+
+set(UEFI_LOADER_BINARY ${CMAKE_CURRENT_BINARY_DIR}/mos_uefi_loader.efi)
 
 add_custom_command(TARGET mos_uefi_loader
     POST_BUILD
-    BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/mos_uefi_loader.efi
+    BYPRODUCTS ${UEFI_LOADER_BINARY}
     COMMAND
     objcopy
         -j .text -j .sdata -j .data -j .dynamic -j .dynsym -j .rel -j .rela -j .rel.* -j .rela.* -j .reloc
         --target efi-app-${MOS_ARCH}
         $<TARGET_FILE:mos_uefi_loader>
-        ${CMAKE_CURRENT_BINARY_DIR}/mos_uefi_loader.efi
+        ${UEFI_LOADER_BINARY}
     DEPENDS mos_uefi_loader
     COMMENT "Building UEFI bootloader"
 )
@@ -38,7 +51,7 @@ add_custom_command(TARGET mos_uefi_loader
 # add another post build step to generate the EFI file with debug sections (.debug_info .debug_abbrev .debug_loc .debug_aranges .debug_line .debug_macinfo .debug_str)
 add_custom_command(TARGET mos_uefi_loader
     POST_BUILD
-    BYPRODUCTS ${CMAKE_CURRENT_BINARY_DIR}/mos_uefi_loader.debug
+    BYPRODUCTS ${UEFI_LOADER_BINARY}.debug
     COMMAND
     objcopy
         -j .text -j .sdata -j .data -j .dynamic -j .dynsym -j .rel -j .rela -j .rel.* -j .rela.* -j .reloc
@@ -46,7 +59,10 @@ add_custom_command(TARGET mos_uefi_loader
         -j .symtab -j .strtab -j .shstrtab
         --target efi-app-${MOS_ARCH}
         $<TARGET_FILE:mos_uefi_loader>
-        ${CMAKE_CURRENT_BINARY_DIR}/mos_uefi_loader.debug
+        ${UEFI_LOADER_BINARY}.debug
     DEPENDS mos_uefi_loader
     COMMENT "Building UEFI bootloader with debug sections"
 )
+
+add_summary_item(BOOTABLE mos_uefi_loader.efi ${UEFI_LOADER_BINARY} "EFI Bootloader")
+add_summary_item(BOOTABLE mos_uefi_loader.efi.debug ${UEFI_LOADER_BINARY}.debug "EFI Bootloader Debug Symbols")
