--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -49,7 +49,7 @@
                 {
                     // !! May need to change the addresses
                     "description": "Setup UEFI Relocation",
-                    "text": "add-symbol-file ${workspaceRoot}/build/arch/x86_64/boot/uefi/mos_uefi_loader.efi.debug 0xBE369000 -s .data 0xBE36F000",
+                    "text": "add-symbol-file ${workspaceRoot}/build/arch/x86_64/boot/uefi/mos_uefi_loader.efi.debug 0xBE364000 -s .data 0xBE36B000",
                 },
                 {
                     "description": "Enable pretty-printing for gdb",
