userspace: add lock-bench test

--- a/userspace/tests/CMakeLists.txt
+++ b/userspace/tests/CMakeLists.txt
@@ -4,5 +4,6 @@ add_subdirectory(fork)
 add_subdirectory(librpc)
 add_subdirectory(ipc)
 add_subdirectory(locks)
+add_subdirectory(locks-bench)
 
 add_subdirectory(cxx)
