--- a/userspace/tests/CMakeLists.txt
+++ b/userspace/tests/CMakeLists.txt
@@ -3,7 +3,7 @@
 add_subdirectory(fork)
 add_subdirectory(librpc)
 add_subdirectory(ipc)
-add_subdirectory(locks)
+add_subdirectory(my_mutex)
 add_subdirectory(locks-bench)
 
 add_subdirectory(cxx)
