my_mutex: port to text mode console

--- a/userspace/tests/locks-bench/CMakeLists.txt
+++ b/userspace/tests/locks-bench/CMakeLists.txt
@@ -1,5 +1,9 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_executable(locks-bench main.c helpers.c)
+add_executable(locks-bench
+    main.c
+    ../console-helpers.c
+)
+
 setup_userspace_program(locks-bench /tests "Benchmarking different locks")
 target_link_libraries(locks-bench PRIVATE rpc)
