--- a/userspace/tests/my_mutex/CMakeLists.txt
+++ b/userspace/tests/my_mutex/CMakeLists.txt
@@ -1,4 +1,9 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-add_executable(my_mutex main.c)
+add_executable(my_mutex
+    main.c
+    ../console-helpers.c
+)
+
 setup_userspace_program(my_mutex /tests "My own mutex implementation using futexes")
+target_link_libraries(my_mutex PRIVATE rpc)
