userspace: move my_mutex & locks-bench to programs/

--- a/userspace/programs/CMakeLists.txt
+++ b/userspace/programs/CMakeLists.txt
@@ -3,4 +3,6 @@
 add_subdirectory(init)
 add_subdirectory(core-utils)
 add_subdirectory(device-manager)
+add_subdirectory(my_mutex)
+add_subdirectory(locks-bench)
 add_subdirectory(syscall_demo)
