coreutils: add shutdown

--- a/userspace/programs/core-utils/CMakeLists.txt
+++ b/userspace/programs/core-utils/CMakeLists.txt
@@ -2,3 +2,6 @@
 
 add_executable(ls ls.c)
 setup_userspace_program(ls /programs "List files and directories")
+
+add_executable(shutdown shutdown.c)
+setup_userspace_program(shutdown /programs "Shutdown the system")
