tests: add userspace test launcher

--- a/userspace/tests/CMakeLists.txt
+++ b/userspace/tests/CMakeLists.txt
@@ -3,5 +3,7 @@
 add_subdirectory(fork)
 add_subdirectory(librpc)
 add_subdirectory(ipc)
-
 add_subdirectory(cxx)
+
+add_executable(test-launcher test-main.c)
+setup_userspace_program(test-launcher /tests "Userspace test launcher")
