--- a/.github/workflows/build-mos.yml
+++ b/.github/workflows/build-mos.yml
@@ -10,6 +10,7 @@ jobs:
   build:
     name: "MOS ${{matrix.target}} (${{matrix.build_type}}, Tests: ${{matrix.run_tests}})"
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     strategy:
       fail-fast: false
       matrix:
